--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,37 @@
-<h1 class="heading">Vaccine Easy</h1>
-
-<div class="formBar">
-    <h3>Enter your pincode ( Only for 18-44)</h3>
-    <div class="bar">
-      <input [(ngModel)]="pincode">
-      <button (click)="start(pincode)">Find</button>
-    </div>
-    
+<div class="main">
+<div class="heading">
+  <div class="head-box">
+    <p>Vaccine Easy<p>
+  </div>
+  
 
 </div>
 
 
-<div *ngFor="let centre of centres" class="data">
-  <p>Vaccine Available in <b><span class="name">{{centre.name}}</span></b> is <span class="count">{{centre.sum}}</span></p>
-  </div>
+</div>
+
+<search-model [show]="show" [isRealTime]="isRealTime" [isOneTime]="isOneTime"></search-model>
+<div class="search-opening">
+    <div class="head" >
+        <p>Lets find your Vaccine</p>
+    </div>
+    <div class="button-area">
+        <div class="area1">
+          <p class="normal">Click here for Real time data</p>
+          <p class="alert">** Might get slow sometime **</p>
+          <div>
+            <button (click)="startRealTimeModel()">Find</button>
+          </div>
+          
+        </div>
+
+        <div class="area1">
+          <p class="normal">Click here for Onetime time data</p>
+          <p class="alert">** Can be refreshed **</p>
+          <div>
+            <button (click)="startOneTimeModel()">Find</button>
+          </div>>
+        </div>
+        
+    </div>
+</div>
